# eugine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml
Eugine/: CMakeLists.txt
Eugine/include/: game.hpp
Eugine/include/Utils/: application.hpp  screen.hpp  singleton.hpp
Eugine/src/: game.cpp  main.cpp
Eugine/src/Utils/: screen.cpp
cmake/: Findimgui.cmake
lib/: CMakeLists.txt
lib/Scrap/: CMakeLists.txt
lib/Scrap/include/: scrap.hpp  tokens.hpp
lib/Scrap/include/util/: lookup.hpp  push_back_stream.hpp
lib/Scrap/src/: scrap.cpp  tokens.cpp
public/: index.html  styles.css
scripts/: docker-build.sh  generate.sh  run.sh  watch.sh
src/: main.cpp
